[tool.poetry]
name = "pp4hlab"
version = "0.1.0"
description = ""
authors = ["oleh17v <burik15v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
